# SparseSolv

./: .buildinfo  .gitignore  CMakeLists.txt  Introduction.html  README.md  REFACTORING_PLAN.md  genindex.html  history.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js
.doctrees/: Introduction.doctree  environment.pickle  history.doctree  index.doctree
.github/workflows/: ci.yml  sphinx.yml  sphinx.yml.yml
000_thirdparty/: README.md
000_thirdparty/Eigen/: AccelerateSupport  Cholesky  CholmodSupport  Core  Dense  Eigen  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  QtAlignedMalloc  SPQRSupport  SVD  Sparse  SparseCholesky  SparseCore  SparseLU  SparseQR  StdDeque  StdList  StdVector  SuperLUSupport  ThreadPool  UmfPackSupport  Version
000_thirdparty/Eigen__/: KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QtAlignedMalloc  Sparse  SparseLU  StdList
000_thirdparty/Eigen__ver3/: Eigenvalues  Geometry  SparseCore
000_thirdparty/Eigen_unsupported/: CMakeLists.txt  README.txt
000_thirdparty/Eigen_unsupported/Eigen/: AdolcForward  AlignedVector3  ArpackSupport  AutoDiff  BVH  CMakeLists.txt  EulerAngles  FFT  IterativeSolvers  KroneckerProduct  LevenbergMarquardt  MPRealSupport  MatrixFunctions  NNLS  (+7 more)
SparseSolv/: BasicDefinesC.hpp  CMakeLists.txt  IncompleteLUT_my.h  MatSolvers.hpp  MatSolversEigenMKL.hpp  MatSolversICCG.hpp  MatSolvers_ABMCICCG.cpp  MatSolvers_Base.cpp  MatSolvers_Eigen_BiCG_my.cpp  MatSolvers_ICCG.cpp  MatSolvers_ICCOCG.cpp  MatSolvers_ICMRTR.cpp  MatSolvers_SGSMRTR.cpp  SparseMat.cpp  SparseMatC.cpp  SparseMatC.hpp  SparseMatOperators.cpp  SparseMatTMPL.hpp  main.cpp  makefile
SparseSolvPy/: CMakeLists.txt  MatSolvers.hpp  MatSolvers_ABMCICCG.cpp  MatSolvers_Base.cpp  MatSolvers_Eigen.cpp  MatSolvers_ICCG.cpp  MatSolvers_ICCOCG.cpp  MatSolvers_ICMRTR.cpp  MatSolvers_MKL.cpp  MatSolvers_SGSMRTR.cpp  MatSolvers_pybnd_add_memo.txt  SparseMat.cpp  SparseMat.hpp  SparseMatC.cpp  SparseMatC.hpp  SparseMatOperators.cpp  SparseMatOperators.hpp  SparseMatPy.cpp  SparseMatTMPL.hpp  makefile  pybind_MatSolversPy.cpp  pybind_SparseMatPy.cpp
_sources/: history.md.txt  index.rst.txt
cmake/: SparseSolvConfig.cmake.in
docs/: README.html  README.md
docs/doxygen/: Doxyfile  index.html
docs/html/: Introduction.md  conf.py  index.rst
doxygen/: BasicDefinesC_8hpp_source.html  BasicDefinesEigenCore_8hpp_source.html  BasicDefinesEigenSparse_8hpp_source.html  BasicDefinesEigen_8hpp_source.html  IncompleteLUT__my_8h_source.html  MatSolverBase_8cpp.html  MatSolverBase_8hpp_source.html  MatSolverICCG_8cpp.html  MatSolverICCG_8hpp_source.html  MatSolverMRTR_8hpp_source.html  MatSolversEigenMKL_8hpp_source.html  MatSolvers_8hpp_source.html  SparseBuilderTMPL_aliases.html  SparseBuilder_8cpp.html  SparseBuilder_8hpp.html  SparseBuilder_8hpp.js  SparseBuilder_8hpp_source.html  SparseMatC_8hpp_source.html  SparseMatOperators_8hpp_source.html  SparseMatTMPL_8hpp_source.html  SparseMat_8hpp_source.html  SparseTypeDefine_8hpp.html  SparseTypeDefine_8hpp.js  SparseTypeDefine_8hpp_source.html  SprsOperator_8hpp.html  SprsOperator_8hpp.js  SprsOperator_8hpp_source.html  SprsOperator__MatOps_8cpp.html  SprsOperator__MatOps_8cpp.js  SprsPreconditioner_8cpp.html  SprsPreconditioner_8cpp.js  SprsPreconditioner_8hpp.html  SprsPreconditioner_8hpp.js  SprsPreconditioner_8hpp_source.html  SprsTrans_8cpp.html  SprsTrans_8cpp.js  SprsTrans_8hpp.html  SprsTrans_8hpp.js  SprsTrans_8hpp_source.html  annotated.html  (+140 more)
doxygen/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  (+7 more)
examples/: Pybind_example.py  cmagnet.py
examples/VoxelFEM/: CMakeLists.txt  Defines_Mesh.h  Defines_Other.h  Edge.cpp  Edge.h  Element.cpp  Element.h  Node.cpp  Node.h  VoxelMatrix.cpp  VoxelMesh.cpp  VoxelMesh.h  main.cpp  makefile  setBoundary.cpp  setMaterial.cpp  setT_Vector.cpp
examples/VoxelFEM/MeshMakerFile/: Boundary.h  Edge.h  Element.h  MeshMaker.cpp  MeshMaker.h  Node_Mesh.h  SearchTree.h  T_Vector.h  makefile
include/SparseSolv/: BasicDefinesEigen.hpp  BasicDefinesEigenSparse.hpp  MatSolverBase.hpp  MatSolverICCG.hpp  SparseBuilder.hpp  SprsPreconditioner.hpp
include/SparseSolve/: MatSolvers.hpp  MatSolversEigenMKL.hpp  SparseMat.hpp  SparseMatOperators.hpp  SparseMatTMPL.hpp
matlab/: build_mex.m  sparsesolv.m  sparsesolv_mex.cpp  sparsesolv_mex.mexw64  symmetric_sparse_to_csr.m  test_all_solvers.m  test_sparsesolv.m
pybind/: CMakeLists.txt  MatSolverMRTR_ICver.cpp  MatSolvers_ABMCICCG.cpp  MatSolvers_Eigen_BiCG_my.cpp  MatSolvers_Eigen_unsupported.cpp  MatSolvers_ICCG.cpp  MatSolvers_ICCOCG.cpp  MatSolvers_ICMRTR.cpp  MatSolvers_MKL.cpp  MatSolvers_pybnd_add_memo.txt  SparseBuilder.cpp  SparseMat.cpp  SparseMatOperators.cpp  SprsOperator_MatOps.cpp  pybind.cpp  pybind_MatSolversPy.cpp  pybind_SparseMatPy.cpp
pybind/include/SparseSolve/: BasicDefinesC.hpp  BasicDefinesEigenCore.hpp  IncompleteLUT_my.h  MatSolverMRTR.hpp  MatSolvers.hpp  SparseMat.hpp  SparseMatC.hpp  SparseTypeDefine.hpp  SprsOperator.hpp  SprsTrans.hpp
python/: CMakeLists.txt  bindings.cpp
src/: CMakeLists.txt  MatSolverBase.cpp  MatSolverICCG.cpp  MatSolverMRTR_SGSver.cpp  MatSolvers_Base.cpp  MatSolvers_Eigen.cpp  MatSolvers_SGSMRTR.cpp  SparseMat.cpp  SparseMatC.cpp  SprsPreconditioner.cpp  SprsTrans.cpp  main.cpp
tests/: CMakeLists.txt
tests/cpp/: test_basic.cpp
tests/ngsolve/: CMakeLists.txt  test_ngsolve_preconditioner.cpp
tests/python/: conftest.py  test_basic.py
(+859 files in other folders)
